Fix issues with spacing and font
Added misses font options to the document, as well as adjusting padding and position to fix spacing issues.

--- a/css/main.css
+++ b/css/main.css
@@ -1,23 +1,56 @@
 html {
   box-sizing: border-box;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
+  line-height: 1.5;
+  font-size: 100%;
 }
 
 *, *::before, *::after {
   box-sizing: inherit;
 }
 
-.placeholder {
+body {
+  padding: 0;
+  margin: 0;
+}
+
+h2 {
+  display: inline;
+  font-size: 4rem;
+  color: #fff;
+  background-color: rgba(0, 0, 0, .5);
+  margin: 0;
+  padding: 0;
+  line-height: 1.4;
+}
+
+p {
+  font-style: italic;
+  font-size: 2rem;
+  margin: 0;
+  padding-top: .5em;
+}
+
+.img-flex {
   display: block;
   width: 100%;
-  position: absolute;
 }
 
-.moth {
+.banner {
+  overflow: hidden;
   position: relative;
+  width: 100%;
+  max-height: 500px;
 }
 
-.hero {
+.banner-content {
+  width: 100%;
+  max-width: 50em;
+  bottom: 1.5em;
+  padding-left: 1em;
+  padding-right: 1em;
   position: absolute;
-  z-index: 20;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 500;
 }
